Fix: percentages bug on safari fixed

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -93,8 +93,7 @@ body {
 
 .chat-messages .chat-input .emoji > img {
 	position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 18px;
 }
 
 .chat-messages .chat-input .emoji > img:hover {
